# neighborhood-issue-tracker

./: .env.example  .env.production.example  .gitattributes  .gitignore  LICENSE  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pytest_result.txt
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.loadtest  LOAD_TESTING.md  README.md  alembic.ini  docker-compose.loadtest.yml  entrypoint.sh  main.py  pyproject.toml  requirements-loadtest.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241204_120000_initial_schema.py  20241204_130000_add_password_auth.py  20241206_add_saved_addresses.py  20241219_add_districts_service_areas.py  20241220_add_team_assignments.py  20241222_multi_escalations.py  20241223_add_notifications.py  20241225_add_email_verification.py  20241225_add_password_changed_at.py  20251225_015506_add_new_notification_types.py  20251225_add_feedback_updated_at.py
backend/app/: __init__.py  config.py  database.py
backend/app/api/: deps.py
backend/app/core/: exceptions.py  permissions.py  rate_limit.py  security.py
backend/app/models/: __init__.py  address.py  base.py  category.py  comment.py  district.py  escalation.py  feedback.py  notification.py  photo.py  service_area.py  team.py  ticket.py  user.py
backend/loadtests/: __init__.py  config.py  locustfile.py  seed_test_users.py  utils.py
backend/results/: .gitkeep
backend/tests/: __init__.py  conftest.py  test_auth.py  test_categories.py  test_escalations.py  test_permissions.py  test_security.py  test_users.py
(+190 files in other folders)
